# rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: bench.rs
src/: char_set.rs  lib.rs  macros.rs  utf8.rs
src/helper/: mod.rs  simd.rs
