[package]
name = "utf-c"
authors = ["Nick Ilhan Atamgüc <nickatamguec@outlook.com>"]
license = "MIT"

version = "1.0.0"
rust-version = "1.89.0"
edition = "2024"

description = "A small and simple compression for UTF-8 texts"
repository = "https://github.com/utf-c/rust"
homepage = "https://utf-c.com"
keywords = ["utf", "utf8", "utf-8", "utfc", "compression"]
categories = ["compression"]
exclude = [".github/", ".cargo/"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }

[features]
default = ["simd"]
# Use SSE2 or NEON
simd = []
# Use AVX2 (Requires the "simd" feature)
simd_extra = []
# Use AVX512 (Requires the "simd" feature)
simd_ultra = []

[[bench]]
name = "bench"
harness = false
